--- a/templates/index.html
+++ b/templates/index.html
@@ -351,9 +351,15 @@
                 </div>
                 <div class="why_content text-center">
                   <div class="why_title">{{i.title}}</div>
-                  <div class="why_text">
+                    <div class="why_text" style="height: 170px;">
                     <p>{{i.description}}</p>
                   </div>
+                  <!-- <div class="why_text">
+                    <p style="display: -webkit-box;
+                              overflow: hidden;
+                              -webkit-line-clamp: 2;
+                              -webkit-box-orient: vertical;">{{i.description}}</p>
+                  </div> -->
                 </div>
               </div>
             </div>
